# odil-spectral

./: .gitignore  pyproject.toml
src/odil-spectral/grids/: chebyshev_grid_2d.py  uniform_grid_fd_2d.py
src/odil-spectral/training_utils/: train_alm.py  train_logging.py
src/odil_spectral/grids/: chebyshev_grid_2d.py  chebyshevgauss_grids.py
src/odil_spectral/training_utils/: train_model.py
